--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/bg5.mp4") top center;
+  background: url("../img/bg4.jpg") top center;
   background-size: cover;
 }
 
