Portfolio pages added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,8 +400,11 @@ section {
   color: #1f5297;
 }
 
+.nowrap {
+  white-space: nowrap ;
+}
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
@@ -661,6 +664,15 @@ section {
 
 .portfolio-details .portfolio-description p {
   padding: 0;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: 700;
+  font-size: larger;
 }
 
 /*--------------------------------------------------------------
